<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_red_light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBar"
            android:layout_toStartOf="@+id/btPlayPause"
            android:layout_toLeftOf="@+id/btPlayPause"
            android:contentDescription="@string/previous_song"
            android:src="@android:drawable/ic_media_previous" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:max="10"
            android:progress="3" />

        <ImageButton
            android:id="@+id/btPlayPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBar"
            android:contentDescription="@string/play_pause"
            android:src="@android:drawable/ic_media_play"
            android:layout_centerHorizontal="true"/>

        <ImageButton
            android:id="@+id/btNextSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBar"
            android:layout_toEndOf="@+id/btPlayPause"
            android:layout_toRightOf="@+id/btPlayPause"
            android:contentDescription="@string/next_song"
            android:src="@android:drawable/ic_media_next" />
    </RelativeLayout>

</RelativeLayout>